[package]
name = "headjack"
version = "0.4.0"
edition = "2021"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
readme = "README.md"
license = "MIT"
description = "Matrix Bot Framework. Jack into Matrix."
repository = "https://github.com/arcuru/headjack"
homepage = "https://github.com/arcuru/headjack"

[lib]
name = "headjack"

[dependencies]
anyhow = "1"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
matrix-sdk = { version = "0.7.1", features = ["markdown"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.10.3"
dirs = "5.0.1"
rand = "0.8.5"
tracing = "0.1.40"
