[package]
name = "headjack"
version = "0.5.0"
edition = "2021"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
readme = "README.md"
license = "MIT"
description = "Matrix Bot Framework. Jack into Matrix."
repository = "https://github.com/arcuru/headjack"
homepage = "https://github.com/arcuru/headjack"

[lib]
name = "headjack"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
matrix-sdk = { version = "0.7", features = ["markdown"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
regex = "1"
dirs = "5"
rand = "0.8"
tracing = "0.1"
